--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,13 @@
   "manifest_version": 3,
   "name": "Accessibility Tool",
   "version": "1.0",
-  "description": "A tool similar to UserWay to improve web accessibility.",
-  "permissions": ["activeTab", "scripting"],
+  "description": "A accessibility tool to improve web accessibility.",
+  "permissions": ["activeTab", "scripting", "tabs"],
+  "icons": {
+    "16": "Images/icon16.png",
+    "48": "Images/icon48.png",
+    "128": "Images/icon128.png"
+  },
   "action": {
     "default_popup": "popup.html"
   },
@@ -12,8 +17,17 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["images/tool-icon.png"],
+      "resources": [
+        "Images/*.png",
+        "Images/tool-icon.png",
+        "Images/screen-reader.png",
+        "Images/contrast.png",
+        "Images/text-size.png",
+        "Images/highlight.png",
+        "Images/reset.png"
+      ],
       "matches": ["<all_urls>"]
     }
-  ]
+  ],
+  "host_permissions": ["<all_urls>"]
 }
